# ROCKS-Rao-Blackwellized-Particle-Filter

./: .gitignore  CMakeLists.txt  HEURISTICS_TO_MATH.md  RBPF_DESIGN_CHOICES.md  README.md  all_references.md  heuristics_list.md  volatility_filter_architecture.md
-python/: rbpf_diagnostic.csv
PGAS/: ADAPTIVE_KAPPA.md  CMakeLists.txt  ORACLE_INTEGRATION_PLAN.md  circular_buffer.c  circular_buffer.h  lifeboat.c  lifeboat.h  lifeboat_validation.h  mkl_tuning.h  paris_fast.c  paris_fast.h  paris_mkl.c  paris_mkl.h  pgas.c  pgas.h  pgas_mkl.c  pgas_mkl.h  pgas_omp_compat.h  pgas_paris.c  pgas_paris.h
PGAS/0-non-mkl/: pgas.c  pgas.h
PGAS/hawkes_signal/: CMakeLists.txt  hawkes_integrator.c  hawkes_integrator.h  test_hawkes_scenarios.c
PGAS/integration/: test_oracle_full_integration.c
PGAS/kl trigger/: kl_trigger.h  test_kl_trigger.c
PGAS/kl_trigger/: CMakeLists.txt  kl_trigger.c
PGAS/oracle bridge/: oracle_bridge.c  oracle_bridge.h  test_oracle_full_integration.c  test_oracle_integration.c
PGAS/oracle_bridge/: CMakeLists.txt  README.md  oracle_bridge.c  oracle_bridge.h  test_oracle_full_integration.c  test_oracle_integration.c
PGAS/pgas_confidence/: CMakeLists.txt  pgas_confidence.c  pgas_confidence.h  test_pgas_confidence.c
PGAS/rbpf_trajectory/: CMakeLists.txt  rbpf_trajectory.c  rbpf_trajectory.h  test_rbpf_trajectory.c
PGAS/saem blender/: saem_blender.c  saem_blender.h  test_saem_blender.c  test_three_tier_reset.c
PGAS/saem_blender/: CMakeLists.txt  saem_blender.h
PGAS/test-bench/: CMakeLists.txt  benchmark_all.c  benchmark_trans_learning.c  pgas_learn_trans.c  pgas_paris.c  pgas_paris.h  pgas_validation_a.c  pgas_validation_adaptive.c  test_exponential_weighting.c  test_full_learning.c  test_lifeboat.c  test_paris_mkl.c  test_pgas_mkl.c  test_pgas_ocsn.c  test_pgas_vs_paris.c  test_regime_learning.c
PGAS/thompson_sampler/: CMakeLists.txt  thompson_sampler.c  thompson_sampler.h
PGAS/thomson sampler/: test_thompson_sampler.c
RBPF/: CMakeLists.txt  mkl_config.h  rbpf_adaptive_forgetting.c  rbpf_ksc.h  rbpf_ksc_param_integration.c  rbpf_ksc_param_integration.h  rbpf_ocsn_robust.c  rbpf_ocsn_robust.h  rbpf_param_learn.c  rbpf_param_learn.h  rbpf_watchdog.c  rbpf_watchdog.h
RBPF-BOCPD/: bocpd.c  bocpd.h
RBPF/HDP-Beam/: ADAPTIVE_RBPF_FAILURE_MODES (2).md  bench_sticky_hdp.c  hdp_beam_supervisor_architecture.md  sticky_hdp_beam.c  sticky_hdp_beam.h
RBPF/HDP-Beam/scalar/: sticky_hdp_beam.c
RBPF/Online-VI/: online_vi_transition.c  online_vi_transition.h  test_vi_vs_dirichlet.c
RBPF/mmpf/: MMPF_ADAPTIVE_ROADMAP (1).md  MMPF_ARCHITECTURE.md  dynamic_bollinger_band.md  mmpf_api.c  mmpf_architecture_decisions.md  mmpf_core.c  mmpf_entropy.c  mmpf_entropy.h  mmpf_mcmc.c  mmpf_mcmc.h  mmpf_online_em.c  mmpf_online_em.h  mmpf_over_adaptation_problem.md  mmpf_rocks.c  mmpf_rocks.h  mmpf_shock_avx.c  mmpf_suspension_analogy.md
RBPF/mmpf/csv/: mmpf_full.csv  single_rbpf.csv
RBPF/mmpf/docs/: MMPF_ARCHITECTURE.md  MMPF_VS_SINGLE_RBPF.md  bocpd_mmpf_architecture.md  mmpf_architecture_decisions.md  new_bocpd_plan.md  storvik_plan.md
RBPF/mmpf/new architecture/: mmpf_core.c  mmpf_internal.h
RBPF/mmpf/old architecture/: mmpf_rocks.c
RBPF/ocsn/: rbpf_ocsn_robust.c
RBPF/rao-blackwellized/: rbpf_dirichlet_transition.h  rbpf_fisher_rao.h  rbpf_kl_tempering.c  rbpf_kl_tempering.h  rbpf_ksc.c  rbpf_ksc.h  rbpf_ksc_init.c  rbpf_ksc_output.c  rbpf_ksc_student_t.c  rbpf_lut_buffer.h  rbpf_mh_jitter.c  rbpf_mh_jitter.h  rbpf_silverman.c  rbpf_silverman.h  rbpf_sprt.c  rbpf_sprt.h  transition_matrix_strategies.md
RBPF/rao-blackwellized/old/: rbpf_ksc.c
RBPF/soft_dirichlet/: soft_dirichlet_transition.c  soft_dirichlet_transition.h
RBPF/storvik/: p2_quantile.h  rbpf_adaptive_forgetting.c  rbpf_ext_hawkes.c  rbpf_ext_smoothed_storvik.c  rbpf_fixed_lag_smoother.c  rbpf_fixed_lag_smoother.h  rbpf_ksc_param_integration.c  rbpf_ksc_param_integration.h  rbpf_param_learn.c  rbpf_param_learn.h
analysis_python/: __init__.py  compare.py  data.py  rbpf.py  rbpf_analysis.ipynb  tuner.py
docs/: ADAPTIVE_FORGETTING.md  RBPF_Tail_Handling_Plan (1).md
test/: bench_student_t.c  mmpf_tuner.c  mmpf_tuner_stage2.c  rbpf_comparison_test.c  rbpf_ksc_bench.c  rbpf_tuner_mp.c  rbpf_viz_export.c  test_bocpd.c  test_bocpd_comparison.c  test_bocpd_mmpf.c  test_hawkes.c  test_mmpf_advanced.c  test_mmpf_comparison.c  test_mmpf_correctness.c  test_param_learn.c  test_rbpf_integration.c  test_rbpf_scenarios.c  test_rbpf_tuner.c  test_stone1_diagnostic.c
test/mmpf_real_data_test/: MMPF_REAL_DATA_TESTING.md  results_5year.csv  results_covid.csv  test_mmpf_real_data.c
test/tuned_rbpf_csv/: rbpf_viz_data.csv  rbpf_viz_plots.py
